# haskulator

./: README.md  haskulator.cabal
snaplets/heist/templates/: base.tpl  index.tpl
src/: CalcEval.hs  CalcParse.hs  CalcParseLib.hs  CalcStore.hs  CalcTypes.hs  Main.hs
static/css/: foundation.css  foundation.min.css  haskulator.css
static/js/: foundation.min.js
