Name:                haskulator
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable haskulator
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: base                      >= 4        && < 5
               , snap                      >= 0.12     && < 0.13
               , snap-core                 >= 0.9      && < 0.10
               , snap-extras               >= 0.6      && < 0.7
               , heist                     >= 0.12     && < 0.13
               , lens                      >= 3.9      && < 3.10
               , text                      >= 0.11     && < 0.12

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
